# Calculator

./: CMakeLists.txt  README.md  main.cpp
include/: AbstractSyntaxTree.h  BinaryTree.h  ExecuteStrategy.h  Executer.h  Parser.h  PluginManager.h
plugins/basic_operators/: CMakeLists.txt
plugins/basic_operators/include/: basic_math.h
plugins/basic_operators/src/: basic_math.cpp
src/: AbstractSyntaxTree.cpp  BinaryTree.cpp  Executer.cpp  Parser.cpp  PluginManager.cpp
